# r2e2

./: .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  Dockerfile  README.md  index.html
cloud/: .gitignore
cloud/lambda/: create-function.py
cloud/memcached/: get-cmdline-args  memcached.pkr.hcl  memcached.tf  prepare-memcached-machine.sh  restart-memcached-servers  terraform.tfvars
cloud/s3/: create-bucket.py
css/: style.css
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: main.js
etc/: build_type.cmake  cflags.cmake  clang_format.cmake
infrastructure/: .terraform.lock.hcl  get-cmdline-args  get-servers  memcached.tf  restart-memcached-servers  terraform.tfvars
notebooks/: bags.ipynb  hops.ipynb  new-static0.ipynb  pairs.ipynb  rays.ipynb  static.ipynb  static0.ipynb  visualize-job.ipynb  worker-stats.ipynb
preview/: index.html
preview/css/: style.css
preview/js/: main.js
scenes/: .gitignore  dump_example.txt  killeroo-cloud.pbrt  killeroo-dump-noinstance.pbrt  killeroo-dump.pbrt  killeroo-env-dump.pbrt  killeroo-env-load.pbrt  killeroo-load.pbrt  killeroo-matte.pbrt  log.txt  output.txt  scene_stats.txt  sphere-dump.pbrt  sphere-load.pbrt  worker_stats.txt
scenes/geometry/: killeroo-object.pbrt  sphere.ply
scenes/textures/: test.ptx
scripts/: aggregate.sh  build_inside_container.sh  buildenv.Dockerfile  dev.py  generate_static0.py  generate_static0.sh  generate_static_assignment.sh  generate_trace.py  parse_treelet_info.py  parse_worker_info.py  pbrtKillerooTerrainGenerator.py  pbrtKillerooTerrainGeneratorStreaming.py  stats.py
scripts/benchmarks/: benchmark.py  comparison-graphs.py  dashboard.py  detail-graphs-html.py  detail-graphs.py  ec2-dump-scenes.py  export-to-dashboard.py  process-benchmark-scenes.sh  theoretical_model.py
src/: .clang-format
src/accelerators/: bvh.cpp  bvh.h  cloudbvh.cpp  cloudbvh.h
src/accumulator/: accumulator.hh  agent.cc
src/benchmark/: benchmark-master.cc  benchmark-master.cpp  benchmark-worker.cc  benchmark-worker.cpp
src/cloud/: aggregate.cpp  allocator.cpp  allocator.h  benchmark-master.cpp  benchmark-worker.cpp  bvh.cpp  bvh.h  do.cpp  do_trace.cpp  estimators.cpp  estimators.h  gen-sphere.cpp  generate_trace.py  genrays.cpp  graphics.cpp  integrator.cpp  integrator.h  lambda-aggregate.cpp  lambda-master.cpp  lambda-master.h  lambda-server.cpp  lambda-worker.cpp  lambda-worker.h  lambda.h  manager.cpp  manager.h  primitive.h  r2t2.h  raystate.cpp  raystate.h  scheduler.h  simulator.cpp  simulator.h  static-generator.cpp  stats.cpp  stats.h  transfer.cpp  transfer.h  treelet-info.cpp  treeletdumpbvh.cpp  (+6 more)
src/common/: lambda.hh  stats.cc  stats.cpp  stats.h  stats.hh  tile_helper.cc  tile_helper.hh
src/core/: api.cpp  api_makefns.h  fileutil.cpp  fileutil.h  film.h  light.h  paramset.cpp  paramset.h  parser.cpp  pbrt.h  primitive.h  sampler.cpp  sampler.h  scene.h  shape.h  spectrum.h  transform.h
src/execution/: connection.cc  connection.cpp  connection.h  connection.hh  engine.h  engine.hh  loop.cc  loop.cpp  loop.h  loop.hh  response.cc  response.cpp  response.h  response.hh
src/frontend/: accumulator.cc  aggregate-timelapse.cc  aggregate.cc  camera-generator.cc  lambda-aggregate.cc  lambda-master.cc  lambda-worker.cc  load-treelet.cc  local-render.cc  locusta-worker.cc  path-tracer.cc  simulator.cc  treelet-tracer.cc
src/integrators/: mlt.h  path.cpp
src/lights/: diffuse.h  distant.h  goniometric.h  infinite.h  point.h  projection.h  spot.h
src/main/: pbrt.cpp
src/master/: .clang-format  lambda-master.cc  lambda-master.cpp  lambda-master.h  lambda-master.hh  logs.cc  logs.cpp  messages.cc  messages.cpp  queues.cc  queues.cpp  scene.cc  scene.cpp  schedule.cc  schedule.cpp  status.cc  status.cpp
src/messages/: CMakeLists.txt  message.cc  message.hh  pbrt.proto  r2e2.proto  r2t2.proto  serialization.cc  serialization.cpp  serialization.h  serialization.hh  utils.cc  utils.cpp  utils.h  utils.hh
src/net/: address.cc  address.cpp  address.hh  aws.cc  aws.cpp  aws.h  aws.hh  awsv4_sig.cc  awsv4_sig.cpp  awsv4_sig.h  awsv4_sig.hh  body_parser.hh  chunked_parser.cc  chunked_parser.cpp  chunked_parser.h  chunked_parser.hh  client.cc  client.hh  http_client.cc  http_client.hh  http_header.cc  http_header.cpp  http_header.hh  http_message.cc  http_message.cpp  http_message.h  http_message.hh  http_message_sequence.h  http_message_sequence.hh  http_request.cc  http_request.cpp  http_request.h  http_request.hh  http_request_parser.h  http_request_parser.hh  http_response.cc  http_response.cpp  http_response.h  http_response.hh  http_response_parser.cc  (+73 more)
src/remote/: create-benchmark-function.py  create-benchmark-gcloud.sh  create-function.py
src/samplers/: halton.h  maxmin.h  random.h  sobol.h  stratified.h  zerotwosequence.h
src/schedulers/: adaptive.cc  null.h  (+26 more)
web/: CNAME  index.html
(+238 files in other folders)
